--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 <body>
     <main class="container">
         <h2>Login</h2>
-        <form>
+        <form onsubmit="return pegarDadosLogin(event)" >
             <div class="dadosLogin">
                 <label for="email">E-mail</label>
                 <input type="email" id="email" name="email" placeholder="Email">
@@ -21,15 +21,14 @@
             </div>
             
             <div class="button">
-                <input type="submit" value="Logar">
+                <input type="submit" value="Logar" >
                 <input type="reset" value="Apagar">
             </div>
-            
-
         </form>
     </main>
 
 
+    <script src="js/script.js"></script>
 </body>
 
 </html>
