começo de pegando dados com a api

--- a/login.html
+++ b/login.html
@@ -21,8 +21,8 @@
             </div>
             
             <div class="button">
-                <input type="submit" value="Logar" >
-                <input type="reset" value="Apagar">
+                <input type="submit" value="Logar">
+                <input type="reset" value="Apagar" onclick="apagarDados()">
             </div>
         </form>
     </main>
