fazendo os dados do index aparecerem

--- a/cadastro.html
+++ b/cadastro.html
@@ -13,17 +13,16 @@
         <div class="procurarFilme">
             <label for="filme">Buscar Filme:</label>
             <input type="text" id="filme" name="filme" placeholder="Nome do Filme">
-            <input type="submit" value="Buscar">
+            <button type="submit">Buscar</button>
             <div class="resultados">
         </div>
 
-
         <form>
             <div class="dadosFilme"></div>
-                <label for="nome">Nome do Filme:</label>
+                <label for="nome">Nome do Filme</label>
                 <input type="text" id="nome" name="nome" placeholder="Nome do Filme">
                 
-                <label for="diretor">Diretor:</label>
+                <label for="diretor">Diretor</label>
                 <input type="text" id="dirtor" name="diretor" placeholder="Diretor">
 
                 <label for="genero">Gênero</label>
@@ -33,11 +32,14 @@
                 <input type="text" id="faixa" name="faixa" placeholder="Faixa etária">
 
                 <div class="button">
-                    <input type="submit" value="Cadastrar">
+                    <button type="submit">Registrar</button>
                 </div>
         </form>
     </main>
 
 
+
+
+    <script src="js/script.js"></script>
 </body>
 </html>
