--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <ul>
             <li>
                 <a href="index.html">Home</a>
-                <a href="cadastro.html">Cadastrar</a>
                 <a href="login.html">Login</a>
+                <a href="cadastro.html">Cadastrar</a>
             </li>
         </ul>
     </nav>
@@ -22,8 +22,8 @@
         <thead>
             <tr>
                 <th  id="filme">Filme</th>
-                <th  id="genero">Gênero</th>
-                <th  id="diretor">Diretor</th>
+                <th  id="genero">Sinopse</th>
+                <th  id="diretor">Avaliação</th>
             </tr>
         </thead>
 
