fazendo barra de pesquisa

--- a/cadastro.html
+++ b/cadastro.html
@@ -10,9 +10,9 @@
     <main class="container">
         <h2>Cadastro de Filmes</h2>
 
-        <div class="procurarFilme">
-            <label for="filme">Buscar Filme:</label>
-            <input type="text" id="filme" name="filme" placeholder="Nome do Filme">
+        <div class="procurarFilmes">
+            <label for="procurarFilme">Buscar Filme:</label>
+            <input type="text" id="procurarFilme" name="procurarFilme" placeholder="Nome do Filme">
             <button type="submit">Buscar</button>
             <div class="resultados">
         </div>
