--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <title>Document</title>
 </head>
 <body>
-    <main>
+    <!-- <main>
         <div class="procurarDados">
             <label for="buscarFilme">Buscar filme</label>
             <input type="text" id="buscarFilme" name="BuscarFilme" placeholder="Nome do Filme">
             <button>Buscar</button>
         </div>
-    </main>
+    </main> -->
 
 
     <nav>
