feita pequenas alteracoes

--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
                 <input type="email" id="email" name="email" placeholder="Email">
 
                 <label for="senha">Senha</label>
-                <input type="password" id="senha" name="senha" placeholder="Senha">
+                <input type="password" maxlength="9" id="senha" name="senha" placeholder="Senha">
             </div>
             
             <div class="button">
